@@ -93,8 +93,8 @@ Build-Depends: debhelper (>= 9),
  zlib1g-dev,
 # other optional features we enable
 # --enable-vnc
-:debian:# --enable-vnc-jpeg
-:debian: libjpeg8-dev,
+# --enable-vnc-jpeg
+ libjpeg8-dev,
 # --enable-vnc-png
  libpng12-dev,
 # --enable-kvm		linux-*
