@@ -8,3 +8,4 @@ debian/tmp/usr/share/doc/qemu/qemu-tech.html /usr/share/doc/qemu-system/
 debian/tmp/usr/share/doc/qemu/qemu-doc.html /usr/share/doc/qemu-system/
 debian/tmp/usr/share/doc/qemu/qmp-commands.txt /usr/share/doc/qemu-system/
 debian/tmp/usr/lib
+debian/source_qemu.py usr/share/apport/package-hooks/
