@@ -22,8 +22,11 @@ qemu (2.0.0+dfsg-6ubuntu1) UNRELEASED; urgency=medium
       in qemu64 cpu type.
     - d/p/ubuntu/define-trusty-machine-type.patch: define a default trusty
       machine type to ease future live vm migration.
+    - re-introduce apport hook for qemu source package:
+      d/source_qemu-kvm.py, d/qemu-system-common.install
+  * enable-build-dep on libjpeg8-dev - which is now in main
 
- -- Serge Hallyn <serge.hallyn@ubuntu.com>  Mon, 23 Jun 2014 13:24:48 -0500
+ -- Serge Hallyn <serge.hallyn@ubuntu.com>  Mon, 23 Jun 2014 14:52:54 -0500
 
 qemu (2.0.0+dfsg-6) unstable; urgency=medium
 
